--- a/frontend/src/components/Landing/Landing.css
+++ b/frontend/src/components/Landing/Landing.css
@@ -121,7 +121,7 @@ button:focus {
   margin-left: 6%;
 }
 
-.title {
+.landing__title {
   font-weight: 300;
   color: white;
   font-size: 5em;
